--- a/src/view/Fornecedor/adicionarInsumo.html
+++ b/src/view/Fornecedor/adicionarInsumo.html
@@ -180,16 +180,16 @@
                 <fieldset class="foot-dados-Botton">
                     <table class="table-Detalhe">
                         <tr>
-                            <th colspan="3">Insumos Adicionadados</th>
+                            <th colspan="2">Insumos Adicionadados</th>
                         </tr>
                         <tr class="head">
                             <th>Nome do Insumo</th>
                             <th>Dias de espera</th>
                         </tr>
-                        {%for insumo in insumosFornecedor%}
+                        {%for insumo in insumoFornecedor%}
                             <tr>
                                 <td>{{insumo.nomeInsumo}}</td>
-                                <td>{{insumo.diaEntrega}} dias</a></td>
+                                <td>{{insumo.diaEntrega}} dias</td>
                             </tr>
                         {%endfor%}  
                     </table>
