--- a/src/view/Plantacao/estufaAplicarInsumo.html
+++ b/src/view/Plantacao/estufaAplicarInsumo.html
@@ -13,88 +13,67 @@
     <title>Veg</title>
 </head>
 <body>
-    <div class="menu">      
+    <div class="menu">
         <h1>Escolha uma opção</h1>
-        <div class="botoes">
-            <button id="celeiro" class="button-menu">
-                <a href="/celeiro">
-                    <img src="/imagem/menu/celeiro.png" alt="Celeiro">
-                    Celeiro
-                </a>
-            </button>
+        <div class="botoes">               
+            <a href="/balanco" class="button-menu">
+                <img src="/imagem/menu/balanco.png" alt="Balanco">
+                <p>Balanço</p>
+            </a>
 
-            <button id="estufa" class="button-menu">
-                <a href="/estufa">
-                    <img src="/imagem/menu/estufa.png" alt="Estufa">
-                    Estufa
-                </a>
-            </button>
-
-            <button id="armazem" class="button-menu">
-                <a href="/armazem">
-                    <img src="/imagem/menu/armazem.png" alt="Armazem">
-                    Armazém
-                </a>
-            </button>
-
-            <button id="compra" class="button-menu">
-                <a href="/compra">
-                    <img src="/imagem/menu/compra.png" alt="Compra">
-                    Compra
-                </a>
-            </button> 
-
-            <button id="venda" class="button-menu">
-                <a href="/venda">
-                    <img src="/imagem/menu/vender.png" alt="Venda">
-                    Venda
-                </a>
-            </button>
-            
-            <button id="colaborador" class="button-menu">
-                <a href="/colaborador">
-                    <img src="/imagem/menu/colaborador.png" alt="Colaborador">
-                    Colaborador
-                </a>
-            </button>
-                        
-            <button id="relatorio" class="button-menu">
-                <a href="/relatorio">
-                    <img src="/imagem/menu/relatorio-seo.png" alt="Relatório">
-                    Relatório
-                </a>
-            </button>
-            
-            <button id="atividade" class="button-menu">
-                <a href="/atividade">
-                    <img src="/imagem/menu/atividade.png" alt="Atividade">
-                    Atividade 
-                </a>
-            </button>
-
-            <button id="ajuda" class="button-menu">
-                <a href="/atividade">
-                    <img src="/imagem/menu/ajuda.png" alt="Atividade">
-                    Ajuda 
-                </a>
-            </button>
-            
-        </div>   
-        <div id="footer">
-            <button class="button-menu-exit">
-                <a href="/">
-                    <img class="footer" src="/imagem/menu/sair.png" alt="Sair">
-                    <p>Sair</p>
+            <a href="/fluxoCaixa" class="button-menu">
+                <img src="/imagem/menu/caixa.png" alt="Caixa">
+                <p>Fluxo de Caixa</p>
+            </a>
+            <a href="/financiamento" class="button-menu">
+                <img src="/imagem/menu/financas.png" alt="Finanças">
+                <p>Financiamento</p>
+            </a>
+            <a href="/compra" class="button-menu">
+                <img src="/imagem/menu/compra.png" alt="Compra">
+                <p>Compra</p>
+            </a>
+            <a href="/venda" class="button-menu">
+                <img src="/imagem/menu/venda.png" alt="Venda">
+                <p>Venda</p>
+            </a>
+            <a href="/plantacao" class="button-menu">
+                <img src="/imagem/menu/plantacao.png" alt="Plantação">
+                <p>Plantação</p>
+            </a>
+            <a href="/celeiro" class="button-menu">
+                <img src="/imagem/menu/celeiro.png" alt="Celeiro">
+                <p>Celeiro</p>
+            </a>
+            <a href="/armazem" class="button-menu">
+                <img src="/imagem/menu/armazem.png" alt="Armazem">
+                <p>Armazém</p>
+            </a>
+            <a href="/colaborador" class="button-menu">
+                <img src="/imagem/menu/colaborador.png" alt="Colaborador">
+                <p>Colaborador</p>
+            </a>
+            <a href="/relatorio" class="button-menu">
+                <img src="/imagem/menu/relatorio.png" alt="Relatório">
+                <p>Relatório</p>
+            </a>
+            <div class="botoes-footer">
+                <a href="/" class="button-menu">
+                    <img src="/imagem/menu/sair.png" alt="Sair"> 
+                </a>  
+                <a href="/home" class="button-menu">
+                    <img src="/imagem/menu/home.png" alt="Página Pricipal">
                 </a> 
-            </button>
-
-            <button class="button-menu-perfil">
-                <a href="/perfil">
-                    <img class="footer" src="/imagem/menu/perfil.png" alt="Perfil">
-                    <p>Perfil</p>
+                <a href="/ajuda" class="button-menu">
+                    <img src="/imagem/menu/ajuda.png" alt="Ajuda">
                 </a>
-            </button> 
-        </div>
+                <a href="/perfil" class="button-menu">
+                    <img src="/imagem/menu/perfil.png" alt="Perfil">         
+                </a>  
+            </div>
+                       
+        </div>   
+        
     </div>
     
     <div class="main">
