--- a/src/view/Perfil/perfilEditar.html
+++ b/src/view/Perfil/perfilEditar.html
@@ -79,44 +79,64 @@
     
     <div class="main">
         <h1>
-            Sacar
-            <a href="/ativoCirculante">
+            Perfil
+            <a href="vendaVender.html">
                 <img src="/imagem/voltar.png" alt="">
                 Voltar
             </a>
         </h1>
-       
-        
-        <form name="FormConta" action="/sacarValor" method="POST">
 
-            <fieldset name="dadosConta" class="dados-Top">
+        <form action="/editarPerfil" method="POST">
+            <fieldset class="dados-Top">
                 <div class="title">
-                    <legend>Escolha uma conta</legend>
+                    <legend>Dados Pessoais</legend>
                 </div>
                 <div class="write-block">
-                    <label for="codConta">Conta:</label>
-                    <select name="codConta" id="codConta" required>
-                        <option value="" disable="" hidden="">Selecione uma opção</option>
-                        {%for conta in contas%}
-                            <option value={{conta.cod_conta}}>CONTA {{conta.tipo_conta}} {{conta.nome_banco}}</option> 
-                        {%endfor%}
-                    </select>
-                </div>                
-                <button type="submit" class="btn_calcular" name="btn_calcular">Selecionar</button>
-            </fieldset> 
-                           
+                    <label for="nomeUsuario">Nome do Usuario:</label>
+                    <input type="text" id="nomeUsuario" name="nomeUsuario" value='{{dadosUsuario.nome_usuario}}'>
+                </div>
+               <div class="read-block">
+                    <label for="cpfUsuario">CPF do Usuario:</label>
+                    <p class="input">{{dadosUsuario.cpf_usuario}}</p>
+                </div>
+                <div class="write-block">
+                    <label for="telefoneUsuario">Telefone do Usuario:</label>
+                    <input type="text" id="telefoneUsuario" name="telefoneUsuario" value='{{dadosUsuario.telefone_usuario}}'>
+                </div>
+                <div class="read-block">
+                    <label for="dtNascimento">Data de Nascimento:</label>
+                    <p class="input">{{dadosUsuario.dt_nasc_usuario}}</p>
+                </div> 
+            </fieldset>
+
+            <fieldset class="dados-Botton">
+                <div class="title">
+                    <legend>Dados da Acesso</legend>
+                </div>
+                <div class="read-block">
+                    <label for="emailUsuario">Email do Usuario:</label>
+                    <p class="input">{{dadosUsuario.email_usuario}}</p>
+                </div>
+                <div class="read-block">
+                    <label for="funcaoUsuario">Função do Usuario:</label>
+                    <p class="input">{{dadosUsuario.tipo_usuario}}</p>
+                </div>
+                <div class="read-block">
+                    <label for="dtAdmissao">Data de Admissão:</label>
+                    <p class="input">{{dadosUsuario.dt_admisso_usuario}}</p>
+                </div>
+                <div class="write-block">
+                    <label for="passUsuario">Data de Admissão:</label>
+                    <input type="password" id="passUsuario" name="passUsuario" value='{{dadosUsuario.senha_usuario}}'>
+                </div>
+            </fieldset>
+
+            <div class="botton-foot">
+                <button type="submit" class="button-Salvar">
+                    Salvar Dados
+                </button>  
+            </div>
         </form>        
     </div>
-
-    
 </body>
-<script language="JavaScript">
-    function semCarencia() {
-        document.getElementById('valor-carencia').style.visibility = 'hidden';
-    }
-
-    function comCarencia() {
-        document.getElementById('valor-carencia').style.visibility = 'visible';
-    }
-</script>
 </html>
