--- a/src/view/Plantacao/adicionarItens.html
+++ b/src/view/Plantacao/adicionarItens.html
@@ -79,44 +79,93 @@
     
     <div class="main">
         <h1>
-            Sacar
-            <a href="/ativoCirculante">
+            Selecionar Itens
+            <a href="/criarPlanoProducao">
                 <img src="/imagem/voltar.png" alt="">
                 Voltar
             </a>
         </h1>
-       
         
-        <form name="FormConta" action="/sacarValor" method="POST">
-
-            <fieldset name="dadosConta" class="dados-Top">
+        
+        <form action="/adicionarItens" method="POST">
+            <fieldset class="dados-Top">
                 <div class="title">
-                    <legend>Escolha uma conta</legend>
+                    <legend>Adicionar Itens para o plano <strong>{{dadosPlano.nome_plano}}</strong></legend>
                 </div>
+                    
+                <div class="select-block">
+                    <div class="select">
+                        <label for="codItem">Nome do Item:</label>
+                        <select style="width: 65rem;" name="codItem" id="codItem">
+                            <option value="" disable="" hidden="">Selecione uma opição</option> 
+                            {%for insumo in insumoLista%}
+                                <option value={{insumo.cod_insumo}}>{{ insumo.nome_insumo }}</option>
+                            {%endfor%}  
+                        </select>
+                    </div>
+                </div>
+                <div class="select-block">
+                    <div class="select">
+                        <label for="contagemItem">Contagem do Item:</label>
+                        <select style="width: 65rem;" name="contagemItem" id="contagemItem">
+                            <option value="" disable="" hidden="">Selecione uma opição</option> 
+                            <option value="KG">KG</option> 
+                            <option value="L">Litro</option>
+                            <option value="U">Unidade</option>
+                            <option value="SACA">Saca</option>
+                        </select>
+                    </div>
+                </div>
+
                 <div class="write-block">
-                    <label for="codConta">Conta:</label>
-                    <select name="codConta" id="codConta" required>
-                        <option value="" disable="" hidden="">Selecione uma opção</option>
-                        {%for conta in contas%}
-                            <option value={{conta.cod_conta}}>CONTA {{conta.tipo_conta}} {{conta.nome_banco}}</option> 
-                        {%endfor%}
-                    </select>
-                </div>                
+                    <label for="vezesAplicacao">Quantidade(s) de vezes de aplicação:</label>
+                    <input type="number" id="vezesAplicacao" name="vezesAplicacao" min="1" max={{totalDia}} required>
+                </div>
+
+               
                 <button type="submit" class="btn_calcular" name="btn_calcular">Selecionar</button>
-            </fieldset> 
-                           
-        </form>        
+            </fieldset>
+
+            <div class="foot-dados-Botton">
+                <div class="aviso-foot">
+                    <p>Caso não tenha achado o item é possivel cria-lo</p>
+                </div>
+                <div class="acoes-n-banco">
+                    <a href="/criarItem" id="cadastrar-banco"> <p>Criar Insumo</p> </a>
+                </div>
+            </div>
+
+        </form>
+
+        {%if tamanhoLista==0 %}
+
+        {%else%}
+            <form>
+                <fieldset class="foot-dados-Botton">
+                    <table class="table-Detalhe">
+                        <tr>
+                            <th colspan="3">Itens Adicionados</th>
+                        </tr>
+                        <tr class="head">
+                            <th>Nome</th>
+                            <th>Quantidade </th>
+                            <th>Dia Aplicação</th>
+                        </tr>
+                        {%for aplicacao in aplicacaoItem%}
+                            <tr>
+                                <td>{{aplicacao.nome_item}}</td>
+                                <td>{{aplicacao.quantidade_item}} {{aplicacao.contagem_item}}</td>
+                                <td>{{aplicacao.dia_aplicacao}}° dia</td>
+                            </tr>
+                        {%endfor%}  
+                    </table>
+                </fieldset>
+            </form> 
+
+            <div class="acoes-n-banco">
+                <a href="/resultadoPlano" id="cadastrar-banco"> <p>Finalizar</p> </a>
+            </div>
+        {%endif%}
     </div>
-
-    
 </body>
-<script language="JavaScript">
-    function semCarencia() {
-        document.getElementById('valor-carencia').style.visibility = 'hidden';
-    }
-
-    function comCarencia() {
-        document.getElementById('valor-carencia').style.visibility = 'visible';
-    }
-</script>
 </html>
