--- a/src/view/Plantacao/adicionarItensII.html
+++ b/src/view/Plantacao/adicionarItensII.html
@@ -79,44 +79,74 @@
     
     <div class="main">
         <h1>
-            Sacar
-            <a href="/ativoCirculante">
+            Selecionar Itens
+            <a href="/criarPlanoProducao">
                 <img src="/imagem/voltar.png" alt="">
                 Voltar
             </a>
         </h1>
-       
         
-        <form name="FormConta" action="/sacarValor" method="POST">
-
-            <fieldset name="dadosConta" class="dados-Top">
+        
+        <form action="/adicionarAplicacao" method="POST">
+            <fieldset class="dados-Top">
                 <div class="title">
-                    <legend>Escolha uma conta</legend>
+                    <legend>Adicionar Itens para o plano <strong>{{dadosPlano.nome_plano}}</strong></legend>
                 </div>
-                <div class="write-block">
-                    <label for="codConta">Conta:</label>
-                    <select name="codConta" id="codConta" required>
-                        <option value="" disable="" hidden="">Selecione uma opção</option>
-                        {%for conta in contas%}
-                            <option value={{conta.cod_conta}}>CONTA {{conta.tipo_conta}} {{conta.nome_banco}}</option> 
-                        {%endfor%}
-                    </select>
-                </div>                
+                    
+                <div class="read-block">
+                    <label for="nomeInsumo">Nome do Item:</label>
+                    <p class="input">{{ item.nome_item }}</p>
+                </div>
+
+                {%for aplicacao in totalAplicacoes%}
+                
+                    <div class="mix-write-block">
+                        <label for="aplicacao">Momento da {{aplicacao.numero}}ª Aplicação:</label>
+                        <input type="number" id="app" name="app" min="1" required>
+                        <strong><p> {{item.contagem_item}}</p> </strong>
+                        <select name="diaAplicacao" required>
+                            <option value="" disable="" hidden="">Selecione uma opção</option>
+                            {%for dia in totalDia%}
+                                <option value={{dia}}>{{ dia }}° dia</option>
+                            {%endfor%}
+                        </select>
+                    </div>
+
+                {%endfor%}
+
+               
                 <button type="submit" class="btn_calcular" name="btn_calcular">Selecionar</button>
-            </fieldset> 
-                           
-        </form>        
+            </fieldset>
+
+        </form>
+
+        {%if tamanhoLista==0 %}
+
+        {%else%}
+            <form>
+                <fieldset class="foot-dados-Botton">
+                    <table class="table-Detalhe">
+                        <tr>
+                            <th colspan="3">Itens Adicionados</th>
+                        </tr>
+                        <tr class="head">
+                            <th>Nome</th>
+                            <th>Quantidade </th>
+                            <th>Dia Aplicação</th>
+                        </tr>
+                        {%for aplicacao in aplicacaoItem%}
+                            <tr>
+                                <td>{{aplicacao.nome_item}}</td>
+                                <td>{{aplicacao.quantidade_item}} {{aplicacao.contagem_item}}</td>
+                                <td>{{aplicacao.dia_aplicacao}}° dia</td>
+                            </tr>
+                        {%endfor%}  
+                    </table>
+                </fieldset>
+            </form> 
+            
+
+        {%endif%}
     </div>
-
-    
 </body>
-<script language="JavaScript">
-    function semCarencia() {
-        document.getElementById('valor-carencia').style.visibility = 'hidden';
-    }
-
-    function comCarencia() {
-        document.getElementById('valor-carencia').style.visibility = 'visible';
-    }
-</script>
 </html>
