--- a/src/view/Plantacao/criarInsumo.html
+++ b/src/view/Plantacao/criarInsumo.html
@@ -79,44 +79,50 @@
     
     <div class="main">
         <h1>
-            Sacar
-            <a href="/ativoCirculante">
+            Insumo
+            <a href="/">
                 <img src="/imagem/voltar.png" alt="">
                 Voltar
             </a>
         </h1>
-       
         
-        <form name="FormConta" action="/sacarValor" method="POST">
-
-            <fieldset name="dadosConta" class="dados-Top">
+        <form action="/criarItem" method="POST">
+            <fieldset class="dados-Top">
                 <div class="title">
-                    <legend>Escolha uma conta</legend>
+                    <legend>Cadastrar Insumo</legend>
                 </div>
                 <div class="write-block">
-                    <label for="codConta">Conta:</label>
-                    <select name="codConta" id="codConta" required>
-                        <option value="" disable="" hidden="">Selecione uma opção</option>
-                        {%for conta in contas%}
-                            <option value={{conta.cod_conta}}>CONTA {{conta.tipo_conta}} {{conta.nome_banco}}</option> 
-                        {%endfor%}
-                    </select>
-                </div>                
-                <button type="submit" class="btn_calcular" name="btn_calcular">Selecionar</button>
-            </fieldset> 
-                           
-        </form>        
+                    <label for="nomeInsumo">Nome do Insumo:</label>
+                    <input type="text" id="nomeInsumo" name="nomeInsumo" required>
+                </div>
+                
+                <div class="radio-block">
+                    <label for="carencia">Tipo de Insumo:</label>
+                    <p>
+                        <label onclick="semCarencia()">
+                            <input type="radio" id="plantar" name="tipoInsumo" value="PLANTAR"> Plantar
+                        </label>
+                    </p>
+                    <p>
+                        <label onclick="comCarencia()">
+                            <input type="radio" id="aplicar" name="tipoInsumo" value="APLICAR" checked> Aplicar 
+                        </label>
+                    </p>
+                </div>           
+            </fieldset>
+
+            {% if mensagem != "" %}
+                <div class="foot-dados-Botton">
+                    <div class="aviso-foot">
+                        <p>{{mensagem}}</p>
+                    </div>
+                </div>               
+            {% endif %}
+
+            <button type="submit" class="btn_calcular" name="btn_calcular">Próximo</button>
+
+        </form> 
+        
     </div>
-
-    
 </body>
-<script language="JavaScript">
-    function semCarencia() {
-        document.getElementById('valor-carencia').style.visibility = 'hidden';
-    }
-
-    function comCarencia() {
-        document.getElementById('valor-carencia').style.visibility = 'visible';
-    }
-</script>
 </html>
