--- a/src/view/Plantacao/criarPlanoProducao.html
+++ b/src/view/Plantacao/criarPlanoProducao.html
@@ -79,44 +79,57 @@
     
     <div class="main">
         <h1>
-            Sacar
-            <a href="/ativoCirculante">
+            Cadastrar </br> Plano de Produção
+            <a href="/planoProducao">
                 <img src="/imagem/voltar.png" alt="">
                 Voltar
             </a>
         </h1>
-       
         
-        <form name="FormConta" action="/sacarValor" method="POST">
-
-            <fieldset name="dadosConta" class="dados-Top">
+        <form action="/criarPlano" method="POST">
+            <fieldset class="dados-Top">
                 <div class="title">
-                    <legend>Escolha uma conta</legend>
+                    <legend>Dados do Plano de Produção</legend>
                 </div>
                 <div class="write-block">
-                    <label for="codConta">Conta:</label>
-                    <select name="codConta" id="codConta" required>
-                        <option value="" disable="" hidden="">Selecione uma opção</option>
-                        {%for conta in contas%}
-                            <option value={{conta.cod_conta}}>CONTA {{conta.tipo_conta}} {{conta.nome_banco}}</option> 
-                        {%endfor%}
+                    <label for="nomePlano">Nome Plano:</label>
+                    <input type="text" id="nomePlano" name="nomePlano" required>
+                </div>
+                <div class="write-block">
+                    <label for="diasProducao">Dias de Produção:</label>
+                    <input type="number" id="diasProducao" name="diasProducao" min="1" required>
+                </div>
+                <div class="write-block">
+                    <label for="areaTerreno">Área de Producao (em metros²):</label>
+                    <input type="number" id="areaTerreno" name="areaTerreno" min="1" step=".01" placeholder="000.00 m²" required>
+                </div>
+
+                <div class="select-block">
+                    <div class="select">
+                        <label for="codHortalica">Nome da hortaliça que será gerada:</label>
+                        <select style="width: 65rem;" name="codHortalica" id="codHortalica">
+                            <option value="" disable="" hidden="">Selecione uma opição</option> 
+                            {%for hortalica in hortalicaLista%}
+                                <option value={{hortalica.cod_hortalica}}>{{ hortalica.nome_hortalica }}</option>
+                            {%endfor%}  
+                        </select>
+                    </div>
+                </div>
+
+                <div class="mix-write-block">
+                    <label for="quantidadeHortalica">Quantidade de Hortalica:</label>
+                    <input style="width: 15rem;" type="number" id="quantidadeHortalica" name="quantidadeHortalica" min="1" required>
+                    <select name="contagemHortalica" id="contagemHortalica">
+                        <option value="" disable="" hidden="">Selecione uma opição</option> 
+                        <option value="KG">KG</option> 
+                        <option value="MAÇO">Maço</option>
+                        <option value="U">Unidade</option>
+                        <option value="SACA">Saca</option>
                     </select>
-                </div>                
-                <button type="submit" class="btn_calcular" name="btn_calcular">Selecionar</button>
-            </fieldset> 
-                           
-        </form>        
+                </div> 
+            </fieldset>
+            <button type="submit" class="btn_calcular" name="btn_calcular">Salvar</button>
+        </form> 
     </div>
-
-    
 </body>
-<script language="JavaScript">
-    function semCarencia() {
-        document.getElementById('valor-carencia').style.visibility = 'hidden';
-    }
-
-    function comCarencia() {
-        document.getElementById('valor-carencia').style.visibility = 'visible';
-    }
-</script>
 </html>
