--- a/src/view/Plantacao/resultadoPlanoProducao.html
+++ b/src/view/Plantacao/resultadoPlanoProducao.html
@@ -79,44 +79,58 @@
     
     <div class="main">
         <h1>
-            Sacar
-            <a href="/ativoCirculante">
-                <img src="/imagem/voltar.png" alt="">
-                Voltar
-            </a>
+            Plano e Produção 
         </h1>
-       
-        
-        <form name="FormConta" action="/sacarValor" method="POST">
-
-            <fieldset name="dadosConta" class="dados-Top">
-                <div class="title">
-                    <legend>Escolha uma conta</legend>
-                </div>
-                <div class="write-block">
-                    <label for="codConta">Conta:</label>
-                    <select name="codConta" id="codConta" required>
-                        <option value="" disable="" hidden="">Selecione uma opção</option>
-                        {%for conta in contas%}
-                            <option value={{conta.cod_conta}}>CONTA {{conta.tipo_conta}} {{conta.nome_banco}}</option> 
-                        {%endfor%}
-                    </select>
-                </div>                
-                <button type="submit" class="btn_calcular" name="btn_calcular">Selecionar</button>
-            </fieldset> 
-                           
-        </form>        
-    </div>
-
     
-</body>
-<script language="JavaScript">
-    function semCarencia() {
-        document.getElementById('valor-carencia').style.visibility = 'hidden';
-    }
+        <form action="" method="POST">
+            <fieldset class="dados-Top">
+                <div class="title">
+                    <legend>Dados do Plano de Produção</legend>
+                </div>
+                <div class="read-block">
+                    <label for="nomePlano">Nome do Plano:</label>
+                    <p class="input">{{dadosPlano.nome_plano}}</p>
+                </div>
+               <div class="read-block">
+                    <label for="diasProducao">Dias de Producao:</label>
+                    <p class="input">{{dadosPlano.dias_producao}} DIAS</p>
+                </div>
+                <div class="read-block">
+                    <label for="areaProducao">Area de Producao</label>
+                    <p class="input">{{dadosPlano.area_terreno}} m²</p>
+                </div>
+                <div class="read-block">
+                    <label for="nomeProduto">Resultado Produçao:</label>
+                    <p class="input">{{dadosPlano.quantidade_hortalica}} {{dadosPlano.contagem_hortalica}} {{dadosPlano.nome_hortalica}} </p>
+                </div>
+            </fieldset>
 
-    function comCarencia() {
-        document.getElementById('valor-carencia').style.visibility = 'visible';
-    }
-</script>
+            <fieldset class="foot-dados-Botton">
+                <table class="table-Detalhe">
+                    <tr>
+                        <th colspan="3">Item para a Produção</th>
+                    </tr>
+                    <tr class="head">
+                        <th>Dia da Aplicação</th>
+                        <th>Nome</th>
+                        <th>quantidade</th>
+                    </tr>
+                    {%for aplicacao in aplicacaoItem%}
+                        <tr>
+                            <td>{{aplicacao.dia_aplicacao}}° DIA</td>
+                            <td>{{aplicacao.nome_item}}</td>
+                            <td>{{aplicacao.quantidade_item}}{{aplicacao.contagem_item}}</td>
+                        </tr>
+                    {%endfor%}  
+                </table>
+            </fieldset>
+        </form>
+
+        <div class="botoes-fim-cadastro">
+            <a href="/fornecedor" id="cancelar-cadastro"> <p>Cancelar</p> </a>
+            <a href="/cadastrarPlano" id="cadastrar-cadastro"> <p>Cadastrar</p> </a>
+        </div>  
+        
+    </div>
+</body>
 </html>
