--- a/src/view/cadastro.html
+++ b/src/view/cadastro.html
@@ -21,19 +21,19 @@
                 </div>
                 <div class="write-block">
                     <label for="nomeUsuario">Nome:</label>
-                    <input type="text" id="nomeUsuario" name="nomeUsuario">
+                    <input type="text" id="nomeUsuario" name="nomeUsuario" required>
                 </div>
                <div class="write-block">
                     <label for="cpfUsuario">CPF:</label>
-                    <input type="text" id="cpfUsuario" name="cpfUsuario">
+                    <input type="text" id="cpfUsuario" name="cpfUsuario" required>
                 </div>
                 <div class="write-block">
                     <label for="telefoneUsuario">Telefone:</label>
-                    <input type="text" id="telefoneUsuario" name="telefoneUsuario">
+                    <input type="text" id="telefoneUsuario" name="telefoneUsuario" required>
                 </div>
                 <div class="write-block">
                     <label for="dtNascimento">Data de Nascimento:</label>
-                    <input type="date" id="dtNascimento" name="dtNascimento">
+                    <input type="date" id="dtNascimento" name="dtNascimento" required>
                 </div> 
             </fieldset>
 
@@ -43,15 +43,15 @@
                 </div>
                 <div class="write-block">
                     <label for="emailUsuario">Email:</label>
-                    <input type="text" id="emailUsuario" name="emailUsuario" >
+                    <input type="text" id="emailUsuario" name="emailUsuario" required>
                 </div>
                 <div class="write-block">
                     <label for="senhaUsuario1">Senha:</label>
-                    <input type="password" id="senhaUsuario1" name="senhaUsuario1">
+                    <input type="password" id="senhaUsuario1" name="senhaUsuario1" required>
                 </div>
                 <div class="write-block">
                     <label for="senhaUsuario2">Repita Senha:</label>
-                    <input type="password" id="senhaUsuario2" name="senhaUsuario2">
+                    <input type="password" id="senhaUsuario2" name="senhaUsuario2" required>
                 </div>
                 <div class="read-block">
                     <label for="funcaoUsuario">Função:</label>
